Assessment/order-processing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-processing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-processing
  template:
    metadata:
      labels:
        app: order-processing
    spec:
      containers:
      - name: order-processing
        image: siddhpatel/order-processing:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order-processing-service
spec:
  selector:
    app: order-processing
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
